--- a/app/blocks/layout-header/layout-header.scss
+++ b/app/blocks/layout-header/layout-header.scss
@@ -140,7 +140,7 @@
     @include rule(height, (sm: 32));
     @include rule(padding, (sm: 9 8 8));
 
-    .layout-offer-active &, .layout_stable_centered & {
+    [data-layout-last="offer"].layout-offer-active &, .layout_stable_centered & {
       @include screen('sm', max, 2) {
         position: relative;
         display: block;
