update filter at search page

--- a/app/blocks/form-elements/check-button.scss
+++ b/app/blocks/form-elements/check-button.scss
@@ -80,6 +80,12 @@
       }
     }
 
+    #{$b}_fz13 & {
+      line-height: (16 / 13);
+
+      @include rule(font-size, (xl: 13px, xlg: 13, lg: 13, md: 13, sm: 13));
+    }
+
     #{$b}_lg-fz13 & {
       @include screen('lg', max, 2) {
         line-height: (16 / 13);
