--- a/app/blocks/link/nd-link.scss
+++ b/app/blocks/link/nd-link.scss
@@ -274,6 +274,11 @@
       }
     }
 
+    &_cross-bold {
+      @include rule(width, (xl: 12px, xlg: 12, lg: 12, md: 12, sm: 12));
+      @include rule(height, (xl: 12px, xlg: 12, lg: 12, md: 12, sm: 12));
+    }
+
     &_arrow5 {
       width: 13px;
       height: 7px;
