--- a/app/blocks/routes/routes-v2.scss
+++ b/app/blocks/routes/routes-v2.scss
@@ -10,9 +10,9 @@
     width: 100%;
     color: $nd-color-basic;
     font-weight: 400;
+    line-height: 1.2;
 
     @include rule(font-size, (xl: 14px, xlg: 14, lg: 14, md: 14, sm: 15));
-    @include rule(line-height, (xl: 26px, xlg: 26, lg: 26, md: 26, sm: 26));
 
     tbody {
       display: block;
@@ -29,8 +29,10 @@
     justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid $nd-color-border;
+    box-sizing: border-box;
 
-    @include rule(height, (xl: 36px, xlg: 36, lg: 36, md: 36, sm: 36));
+    @include rule(padding, (xl: 5px 0, xlg: 5 0 , lg: 5 0, md: 5 0, sm: 5 0));
+    @include rule(min-height, (xl: 36px, xlg: 36, lg: 36, md: 36, sm: 36));
   }
 
   &__location {
