--- a/app/blocks/space-map/space-map.scss
+++ b/app/blocks/space-map/space-map.scss
@@ -37,7 +37,9 @@
     width: 100%;
     height: 100%;
     box-sizing: border-box;
+    overflow: hidden;
 
+    @include rule(border-radius, (xl: 3px, xlg: 3, lg: 3, md: 3, sm: 0));
     @include rule(height, (sm: 200));
 
     @include screen('sm', max, 2) {
