--- a/app/components/filter/nd-filter.pug
+++ b/app/components/filter/nd-filter.pug
@@ -3,7 +3,7 @@ mixin nd-filter()
     +e.item_type
       +modal-output-special({placeholder: 'Office type', default: 'Any'})._type._notoggle.js-toggle-modal(data-modal-target="filter-type" data-modal-output-type="offer")
     +e.item_team
-      +modal-output-special({placeholder: 'Team <span class="nd-hide-sm">size</span>', default: 'Any'})._team._notoggle.js-toggle-modal(data-modal-target="filter-team" data-modal-output-type="team")
+      +modal-output-special({placeholder: 'Team <span class="nd-hide-sm">&nbsp;size</span>', default: 'Any'})._team._notoggle.js-toggle-modal(data-modal-target="filter-team" data-modal-output-type="team")
     +e.item_location
       +modal-output-special({placeholder: 'Location', default: 'Anywhere'})._notoggle._location.js-toggle-modal(data-modal-target="filter-location" data-modal-output-type="city")
     +e.item_submit.nd-hide-sm
