fixes for map on mobile and reset button for modal-output

--- a/app/blocks/modal-output/modal-output.scss
+++ b/app/blocks/modal-output/modal-output.scss
@@ -335,7 +335,7 @@
       }
     }
 
-    &:not(.is-selected) #{$b} {
+    &.modal-output_topalways:not(.is-selected) #{$b} {
       &__values {
         display: block;
 
