--- a/app/components/filter/nd-filter.pug
+++ b/app/components/filter/nd-filter.pug
@@ -1,10 +1,10 @@
 mixin nd-filter()
   +b.nd-filter&attributes(attributes)
     +e.item_type
-      +modal-output-special({placeholder: 'Office type', default: 'Any', clear: true})._type._notoggle.js-toggle-modal(data-modal-target="filter-type" data-modal-output-type="offer")
+      +modal-output-special({placeholder: 'Office type', default: 'Any', clear: true})._type._topalways._notoggle.js-toggle-modal(data-modal-target="filter-type" data-modal-output-type="offer")
     +e.item_team
-      +modal-output-special({placeholder: 'Team <span class="nd-hide-sm">&nbsp;size</span>', default: 'Any', clear: true})._team._notoggle.js-toggle-modal(data-modal-target="filter-team" data-modal-output-type="team")
+      +modal-output-special({placeholder: 'Team <span class="nd-hide-sm">&nbsp;size</span>', default: 'Any', clear: true})._team._topalways._notoggle.js-toggle-modal(data-modal-target="filter-team" data-modal-output-type="team")
     +e.item_location
-      +modal-output-special({placeholder: 'Location', default: 'Anywhere', clear: true})._notoggle._location.js-toggle-modal(data-modal-target="filter-location" data-modal-output-type="city")
+      +modal-output-special({placeholder: 'Location', default: 'Anywhere', clear: true})._topalways._notoggle._location.js-toggle-modal(data-modal-target="filter-location" data-modal-output-type="city")
     +e.item_submit.nd-hide-sm
       +nd-button-icon('button', {icon: 'search', notext: true})._pad10.__submit(type="submit" form="search-filter")
