--- a/app/pages/newest/space/space-v5.pug
+++ b/app/pages/newest/space/space-v5.pug
@@ -63,7 +63,7 @@ block content
                         td
                           b £ 2,400 per month
 
-    +e.column_start._start_offer._popup(data-layout="offer")
+    +e.column_start._start_offer._popup(data-layout="offer" data-layout-main)
       +e.wrapper
         +offer-description-v2
         +offer-description-panel()._fixed.is-visible.nd-hide-from-sm
