--- a/app/components/layout/layout.scss
+++ b/app/components/layout/layout.scss
@@ -183,7 +183,7 @@
 
     &_popup {
       position: absolute;
-      width: 0;
+      // width: 0;
       top: 0;
       right: 0;
       bottom: 0;
@@ -192,8 +192,7 @@
       background-color: $nd-color-bg;
       overflow: visible;
       z-index: 11;
-      transform: translate3d(100vw, 0, 0);
-      transition: transform .5s ease-in-out;
+      // transform: translate3d(100vw, 0, 0);
       will-change: transform, visibility, opacity;
       pointer-events: none;
       border-top: none;
@@ -210,196 +209,169 @@
       }
 
       &.is-current {
+        transform: translate3d(0, 0, 0);
+        visibility: visible;
+        pointer-events: auto;
+      }
+
+      &.is-previous {
+        // transform: translate3d(100vw, 0, 0);
+        visibility: visible;
+        pointer-events: none;
+      }
+
+      .is-layout-direction-next &.is-current {
+        z-index: 12;
+      }
+
+      .is-layout-direction-back &.is-current {
+        z-index: 11;
+      }
+
+      .is-layout-direction-next &.is-previous {
+        z-index: 11;
+      }
+
+      .is-layout-direction-back &.is-previous {
         z-index: 12;
       }
 
       &.layout__column_start {
-        transition-delay: 0;
         border-right: none;
       }
 
       &.layout__column_header {
         transform: translate3d(0, -100%, 0);
+        transition: transform .5s ease-in-out;
       }
 
       &.layout__column_end {
         @include screen('sm', min, 2) {
           z-index: 13;
+          transition: transform .5s ease-in-out;
+          transform: translate3d(100vw, 0, 0);
         }
 
-        @include rule(box-shadow, (xl: boxShadow(0, 4, 12, 0, rgba(0, 0, 0, .25), false), xlg: boxShadow(0, 4, 12, 0, rgba(0, 0, 0, .25), 1660), lg: boxShadow(0, 4, 12, 0, rgba(0, 0, 0, .25), 1366), md: boxShadow(0, 4, 12, 0, rgba(0, 0, 0, .25), 960), sm: none));
+        @include cRule(box-shadow, (xl: boxShadow(0, 4, 12, 0, rgba(0, 0, 0, .25), false), xlg: boxShadow(0, 4, 12, 0, rgba(0, 0, 0, .25), 1660), lg: boxShadow(0, 4, 12, 0, rgba(0, 0, 0, .25), 1366), md: boxShadow(0, 4, 12, 0, rgba(0, 0, 0, .25), 960), sm: none));
+
+        @include screen('sm', max, 2) {
+          display: none;
+        }
       }
 
       .map-in-fullview & {
 
         &.layout__column_end {
-          box-shadow: boxShadow(-11, 0, 11, 0, rgba(0, 0, 0, 0.14), false);
-
-          @include screen('xlg', max, 2) {
-            box-shadow: boxShadow(-11, 0, 11, 0, rgba(0, 0, 0, 0.14), 1660);
-          }
-
-          @include screen('lg', max, 2) {
-            box-shadow: boxShadow(-11, 0, 11, 0, rgba(0, 0, 0, 0.14), 1366);
-          }
-
-          @include screen('md', max, 2) {
-            box-shadow: boxShadow(-11, 0, 11, 0, rgba(0, 0, 0, 0.14), 960);
-          }
-
-          @include screen('sm', max, 2) {
-            box-shadow: none;
-          }
+          @include cRule(box-shadow, (xl: boxShadow(-11, 0, 11, 0, rgba(0, 0, 0, .14), false), xlg: boxShadow(-11, 0, 11, 0, rgba(0, 0, 0, .14), 1660), lg: boxShadow(-11, 0, 11, 0, rgba(0, 0, 0, .14), 1366), md: boxShadow(-11, 0, 11, 0, rgba(0, 0, 0, .14), 960), sm: none));
         }
       }
 
-      &.is-layout-animated-out {
-        visibility: visible;
+      &[layout-column-main] {
         width: 100%;
-      }
 
-      .map-in-fullview &, .is-map-animated-out & {
-
-        &.layout__column_end {
-          @include rule(top, (sm: 60));
+        @include screen('md', max, 2) {
+          left: 0;
+          width: 68.75vw;
         }
-      }
 
-      // &.layout__column_start_offer {
-      //   @include rule(top, (sm: 60));
-      // }
-
-      .layout-space-active & {
-        &[data-layout*="space"] {
-          visibility: visible;
-          opacity: 1;
+        @include screen('sm', max, 2) {
           width: 100%;
-          transform: translate3d(0, 0, 0);
-          pointer-events: auto;
-        }
-
-        &.layout__column_start_space {
-          transition-delay: .45s;
-
-          @include screen('md', max, 2) {
-            left: 0;
-            width: 68.75vw;
-          }
-
-          @include screen('sm', max, 2) {
-            transition-delay: 0s;
-            width: 100%;
-          }
-        }
-
-        &.layout__column_end {
-          @include screen('md', max, 2) {
-            right: 0;
-            width: 31.25vw;
-          }
-
-          @include screen('sm', max, 2) {
-            width: 100%;
-          }
         }
       }
 
-      .layout-space-active-reopen & {
-        &[data-layout*="space"] {
-          visibility: visible;
-          opacity: 1;
+      &[data-layout-side] {
+        width: 100%;
+
+        @include screen('md', max, 2) {
+          right: 0;
+          width: 31.25vw;
+        }
+
+        @include screen('sm', max, 2) {
           width: 100%;
-          animation: reopen .5s ease;
-          pointer-events: auto;
         }
       }
 
-      .layout-list-active & {
-        &[data-layout*="list"] {
+      .layout-space-active &, .layout-list-active &, .layout-offer-active & {
+        &[data-layout-side], &[data-layout-header] {
           visibility: visible;
-          width: 100%;
           opacity: 1;
           transform: translate3d(0, 0, 0);
           pointer-events: auto;
         }
-
-        &.layout__column_end {
-          @include screen('md', max, 2) {
-            right: 0;
-            width: 31.25vw;
-          }
-
-          @include screen('sm', max, 2) {
-            width: 100%;
-          }
-        }
       }
 
-      .layout-offer-active & {
-        &[data-layout*="offer"] {
+      .layout-interface-leave-animation-from & {
+        &[data-layout-side],
+        &[data-layout-header] {
           visibility: visible;
-          width: 100%;
           opacity: 1;
           transform: translate3d(0, 0, 0);
-          pointer-events: auto;
-        }
-
-        &.layout__column_start_offer {
-          transition-delay: .45s;
-
-          @include screen('md', max, 2) {
-            left: 0;
-            width: 68.75vw;
-          }
-
-          @include screen('sm', max, 2) {
-            transition-delay: 0s;
-            width: 100%;
-          }
-        }
-
-        &.layout__column_end {
-          @include screen('md', max, 2) {
-            right: 0;
-            width: 31.25vw;
-          }
-
-          @include screen('sm', max, 2) {
-            width: 100%;
-          }
+          pointer-events: none;
         }
       }
 
-      .map-in-fullview.layout-offer-active &, .map-in-fullview.layout-space-active & {
-        &.layout__column_start {
+      .layout-interface-leave-animation-to & {
+        &[data-layout-side] {
+          visibility: visible;
+          opacity: 1;
+          transform: translate3d(100vw, 0, 0);
+          pointer-events: none;
+        }
+
+        &[data-layout-header] {
+          visibility: visible;
+          opacity: 1;
+          transform: translate3d(0, -100%, 0);
+          pointer-events: none;
+        }
+      }
+
+      &.layout-animation-enter-active {
+        transition: transform .5s ease-in-out;
+        transition-delay: .45s;
+
+        @include screen('sm', max, 2) {
+          transition-delay: 0s;
+        }
+
+        .map-in-fullview &,
+        .is-layout-direction-back & {
           transition-delay: 0s;
         }
       }
 
-      &.is-layout-animated-out {
-        &.layout__column_end {
-          @include screen('md', max, 2) {
-            right: 0;
-            width: 31.25vw;
-          }
+      &.layout-animation-leave-active {
+        transition: transform .5s ease-in-out;
+        transition-delay: 0s;
+      }
 
-          @include screen('sm', max, 2) {
-            width: 100%;
-          }
-        }
+      &.layout-animation-enter-from {
+        transform: translate3d(100vw, 0, 0) !important;
+        opacity: 1;
+        visibility: visible;
+        pointer-events: none;
+      }
 
-        &.layout__column_start {
-          transition-delay: 0s;
+      &.layout-animation-enter-to {
+        transform: translate3d(0, 0, 0) !important;
+        opacity: 1;
+        visibility: visible;
+        pointer-events: none;
+      }
 
-          @include screen('md', max, 2) {
-            left: 0;
-            width: 68.75vw;
-          }
+      &.layout-animation-leave-from {
+        transform: translate3d(0, 0, 0) !important;
+        opacity: 1;
+        visibility: visible;
+        pointer-events: none;
+      }
 
-          @include screen('sm', max, 2) {
-            width: 100%;
-          }
-        }
+      &.layout-animation-leave-to {
+        transform: translate3d(100vw, 0, 0) !important;
+        opacity: 1;
+        visibility: visible;
+        pointer-events: none;
       }
     }
 
@@ -434,10 +406,6 @@
 
       @include screen('sm', max, 2) {
         box-shadow: none;
-      }
-
-      &.is-current {
-        z-index: 14;
       }
 
       .layout-header {
@@ -534,110 +502,6 @@
     .layout__column_start_offer & {
       @include rule(padding-top, (xl: 60px, xlg: 60, lg: 60, md: 60, sm: 0));
       @include rule(padding-right, (xl: 50px, xlg: 50, lg: 50, md: 40, sm: 20));
-    }
-  }
-
-  &_static {
-    // grid-template-rows: calc(100vh - 94px);
-    grid-template-rows: 100%;
-    box-sizing: border-box;
-    border-bottom: 1px solid $nd-color-border6;
-
-    // @include rule(padding-top, (xl: 94px, xlg: 94, lg: 66, md: 66, sm: 0));
-
-    @include screen("xlg", max, 2) {
-      // grid-template-rows: calc(100vh - (9400 / 1660) * 1vw);
-    }
-
-    @include screen("lg", max, 2) {
-      // grid-template-rows: calc(100vh - (6600 / 1366) * 1vw);
-    }
-
-    @include screen("md", max, 2) {
-      grid-template-rows: pxtovw(257, 960)auto;
-    }
-
-    @include screen("sm", max, 2) {
-      grid-template-rows: pxtovw(250, 375) auto;
-    }
-
-    #{$b} {
-      &__column {
-        &_start_space {
-          @include screen('sm', max, 2) {
-            background-color: $nd-color-bg;
-
-            &::after {
-              @include screen('sm', max, 2) {
-                @include pseudo;
-
-                background-color: $nd-color-bg;
-                height: pxtovw(80,375);
-                bottom: 0;
-                left: 0;
-                right: 0;
-                z-index: 0;
-                pointer-events: none;
-              }
-            }
-          }
-        }
-
-        &_start_offer {
-          z-index: 8;
-          top: 0;
-
-          @include screen('md', max, 2) {
-            position: absolute;
-          }
-
-          @include screen('sm', max, 2) {
-            top: pxtovw(60, 375);
-            background-color: $nd-color-bg;
-          }
-
-          .layout__wrapper {
-            overscroll-behavior: auto;
-          }
-        }
-
-        &_end {
-          z-index: 9;
-          background-color: $nd-color-bg;
-
-          .layout__wrapper {
-            @include rule(padding-top, (xl: 71px, xlg: 71, lg: 79, md: 95, sm: 0));
-          }
-        }
-      }
-    }
-
-    + .nd-section {
-      @include screen('sm', max, 2) {
-        z-index: 1;
-        position: relative;
-      }
-
-      .nd-section__header {
-        @include screen('sm', max, 2) {
-          position: relative;
-          z-index: 1;
-        }
-      }
-
-      &::before {
-        @include screen('sm', max, 2) {
-          @include pseudo;
-
-          background-color: $nd-color-bg;
-          top: pxtovw(-50, 375);
-          bottom: pxtovw(-50, 375);
-          left: 0;
-          right: 0;
-          z-index: 0;
-          pointer-events: none;
-        }
-      }
     }
   }
 
