--- a/app/pages/newest/search/search-types-v3.pug
+++ b/app/pages/newest/search/search-types-v3.pug
@@ -66,12 +66,12 @@ block content
                           b £ 2,400 per month
 
 
-    +e.column_start._start_space._popup(data-layout="space")
+    +e.column_start._start_space._popup(data-layout="space" data-layout-main)
       +e.wrapper
         +space-description-v2
         +space-description-panel
 
-    +e.column_end._popup(data-layout="list,space,offer")
+    +e.column_end._popup(data-layout="list,space,offer" data-layout-side)
       +e.wrapper
         +nd-results._v2
           +e.divider.nd-hide-from-md
@@ -110,14 +110,14 @@ block content
                         td
                           b £ 2,400 per month
 
-    +e.column_start._start_offer._popup(data-layout="offer")
+    +e.column_start._start_offer._popup(data-layout="offer" data-layout-main)
       +e.wrapper
         +offer-description-v2-daypass
         +offer-description-panel()._fixed.is-visible.nd-hide-from-sm
           +e.buttons
             +nd-button._pad10.__button._wide(href="#") Book now
 
-    +e.column_header._popup(data-layout="space,offer,list")
+    +e.column_header._popup(data-layout="space,offer,list" data-layout-header)
       +layout-header({type: 'space', popup: true})._main
       +layout-header({type: 'list', popup: true})._sort
 
