ease animation for layers

--- a/app/blocks/popups/popups.scss
+++ b/app/blocks/popups/popups.scss
@@ -37,7 +37,7 @@
   &--nd {
     @include screen('md', max, 2) {
       transform: translate3d(100%, 0, 0);
-      transition: transform .3s ease-in-out;
+      transition: transform .3s ease;
     }
 
     &.fancybox-is-open {
@@ -62,7 +62,7 @@
   &-container_shift {
     @include screen('md') {
       transform: translate3d(100%, 0, 0);
-      transition: transform .3s ease-in-out;
+      transition: transform .3s ease;
     }
 
     &.fancybox-is-open {
