--- a/app/components/search-map/nd-search-map.scss
+++ b/app/components/search-map/nd-search-map.scss
@@ -258,7 +258,7 @@
     pointer-events: auto;
     transform: translate3d(0, 0, 0);
     z-index: 0;
-    transition: padding .5s ease-in-out;
+    transition: padding .5s ease;
     will-change: width, height, padding;
     padding: 0;
     box-sizing: border-box;
