fix arrow on desktop offer page

--- a/app/blocks/layout-header/layout-header.scss
+++ b/app/blocks/layout-header/layout-header.scss
@@ -213,6 +213,12 @@
       }
     }
 
+    .layout_stable_centered & {
+      @include screen('sm', min, 2) {
+        display: none;
+      }
+    }
+
     // .layout-offer-active &,
     // .layout-space-active &,
     // .layout-list-active & {
